samples/_failures_safe/1761536928_db0018_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eacfa640.c: In function ‘main’:
./samples/SAFE/__tmp_eacfa640.c:175:5: error: expected expression at end of input
  175 |     int col =
      |     ^~~
./samples/SAFE/__tmp_eacfa640.c:175:5: error: expected declaration or statement at end of input
